navabar and home text contents and emeil input is created

--- a/index.html
+++ b/index.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blockchain.com</title>
+
+    <!-- links -->
+     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/logoo.png" type="images/png">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
+
 </head>
 <body>
+
+
+
+      <div class="navbar" id="navbar">
+
+        <div class="logo">
+            <img src="images/logoo.png" alt="logo">
+            <h2>Blockchain<span>.com</span></h2>
+        </div>
+
+        <ul class="nav-links">
+            <li class="nav-item">Wallet</li>
+            <li class="nav-item">Exchange</li>
+            <li class="nav-item">Explorer</li>
+            <li class="nav-item">pay</li>
+            <li class="nav-item">institutional</li>  
+            <span class="dots nav-item"> <i class="fa-solid fa-ellipsis"></i> </span>         
+        </ul>
+
+
+        <div class="icons">
+            <span class="search-btn" id="search"><i class="fa-solid fa-magnifying-glass"></i></span>
+            <span class="login-btn">Login</span>
+            <span class="signup-btn">Sign Up</span>
+        </div>
+
+      </div>
     
+
+      <div class="home" id="home">
+
+        <div class="content">
+
+       
+
+         <div class="texts">
+            <h1>Be early to the future of finance</h1>
+
+            <h4>
+                Buy Bitcoin, Ethereum, and other leading cryptocurrencies on a platform trusted by millions.
+            </h4>
+
+         </div>
+
+
+         <div class="mail-section">
+            <input type="email" placeholder="Your email address" >
+            <span class="sign-btn">Sign Up</span>
+         </div>
+
+        </div>
+      </div>
+
+
+    <script  src="script.js"> </script>
 </body>
 </html>
